clusters/cluster-1/homeautomation/appdaemon/appdaemon-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appdaemon-ingress
  namespace: default
spec:
  ingressClassName: internal-nginx
  #tls:
  #- hosts:
  #  - "appdaemon.tallflix.ca"
  #  secretName: tls-secret
  rules:
  - host: appdaemon.tallflix.ca
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: appdaemon
            port:
              number: 5050
